--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "description": "Проект «Киноман» от HTML Academy",
   "scripts": {
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
+    "@babel/core": "7.17.9",
+    "@babel/preset-env": "7.16.11",
+    "copy-webpack-plugin": "10.2.4",
     "eslint": "8.13.0",
     "eslint-config-htmlacademy": "5.1.2",
     "webpack": "5.72.0",
-    "webpack-cli": "4.9.2"
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1"
   },
   "engines": {
     "node": "16"
