--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "build": "webpack --mode production",
     "start": "webpack serve --mode development --open"
   },
+  "dependencies": {
+    "camelcase": "6.3.0",
+    "dayjs": "1.11.1",
+    "decamelize": "6.0.0",
+    "he": "1.2.0"
+  },
   "devDependencies": {
     "@babel/core": "7.17.9",
     "@babel/preset-env": "7.16.11",
@@ -23,7 +29,6 @@
     "css-loader": "6.7.1",
     "eslint": "8.13.0",
     "eslint-config-htmlacademy": "5.1.2",
-    "flatpickr": "^4.6.13",
     "style-loader": "3.3.1",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
@@ -31,10 +36,5 @@
   },
   "engines": {
     "node": "16"
-  },
-  "dependencies": {
-    "D": "^1.0.0",
-    "dayjs": "^1.11.1",
-    "he": "^1.2.0"
   }
 }
